# Agentic_Memory_Design_Week-07_08_AEE_Bootcamp-Zuu_Crew-

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  template.py
config/: faqs.yaml  param.yaml
notebooks/: 01_agentic_routing_engine.ipynb  02_memory_capture_and_distill.ipynb  03_memory_store_and_recall.ipynb
sql/: in-class-queries.sql
src/agents/: __init__.py  orchestrator.py  router.py
src/agents/prompts/: agent_prompts.py
src/agents/tools/: crm_tool.py  rag_tool.py
src/infrastructure/: config.py  observability.py
src/infrastructure/db/: crm_models.py  sql_client.py
src/infrastructure/llm/: __init__.py  embeddings.py  llm_provider.py
src/memory/: memory_ops.py
src/services/chat_service/: cag_cache.py  cag_service.py
